--- a/README
+++ b/README
@@ -1,7 +1,4 @@
-interviewing is a preperation kit for interviews with 
-several examples written in C++.
+Algorithms and data structure implementation.
+Most of the examplei are written in C++.
 
 
-
-for git:
-http://gitref.org/creating/
