Edited LINEAR_PROGRAMMING/README via GitHub

--- a/LINEAR_PROGRAMMING/README
+++ b/LINEAR_PROGRAMMING/README
@@ -1,3 +1,6 @@
+
+http://www.purplemath.com/modules/linprog.htm -- Tutorial
+
 http://www.gnu.org/software/glpk/#downloading -- GLPK software
 
 http://www.ibm.com/developerworks/linux/library/l-glpk1/   #resources -- tutorial
