Edited LINEAR_PROGRAMMING/README via GitHub

--- a/LINEAR_PROGRAMMING/README
+++ b/LINEAR_PROGRAMMING/README
@@ -1,5 +1,5 @@
-
 http://www.purplemath.com/modules/linprog.htm -- Tutorial
+http://www.princeton.edu/~rvdb/LPbook/  --princeton
 
 http://www.gnu.org/software/glpk/#downloading -- GLPK software
 
