--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Algorithms and data structure implementation.
-Most of the examplei are written in C++.
+Most of the examples are written in C++, but there is Java, Shell...  
 
 
