Edited LINEAR_PROGRAMMING/README via GitHub

--- a/LINEAR_PROGRAMMING/README
+++ b/LINEAR_PROGRAMMING/README
@@ -7,3 +7,6 @@ http://en.wikibooks.org/wiki/GLPK/Scripting_plus_MathProg#Passing_values_via_the
 
 http://www.ibm.com/developerworks/linux/library/l-glpk1/   #resources -- tutorial
 http://www.ibm.com/developerworks/linux/library/l-glpk2/
+
+
+http://estm60203.blogspot.com/  --tuto + examples
