Edited C++_DESIGN/README via GitHub

--- a/C++_DESIGN/README
+++ b/C++_DESIGN/README
@@ -1,3 +1,6 @@
 See eBook: Effective C++ CD by Scott Meyers
 
 http://www.4p8.com/eric.brasseur/cppcen.html#l33
+
+
+http://bruno-garcia.net/www/Cours/ --cours en français de C++
