--- a/PROJECT_MANAGEMENT/README
+++ b/PROJECT_MANAGEMENT/README
@@ -6,3 +6,6 @@ FreeMind
 
 project planning
 http://www.duxme.fr/fr/index.php
+
+project management resources
+http://www.hraconsulting-ltd.co.uk/project-management-book-0001.htm
