--- a/JUNIT/README
+++ b/JUNIT/README
@@ -1,3 +1,7 @@
 http://junit.sourceforge.net/doc/testinfected/testing.htm
 
 http://today.java.net/pub/a/today/2003/09/12/individual-test-cases.html
+
+http://www.jmdoudoux.fr/java/dej/chap-junit.htm --Developpons en Java book
+
+http://ideoplex.com/id/25/ant-and-junit -- ant
